make sure draggables have move cursor; fix stupid WP form styles that break on mobile;  [touch:9413]

--- a/admin_pages/registration_form/assets/espresso_registration_form_admin.css
+++ b/admin_pages/registration_form/assets/espresso_registration_form_admin.css
@@ -155,6 +155,9 @@ table.question-options-table td:last-child {
     }
 }
 
+
+
+
 #ee-reg-form-editor-form-main-meta-box {
 	padding: 1em 0 0;
 }
@@ -203,6 +206,7 @@ table.question-options-table td:last-child {
 .ui-draggable-dragging {
 	border: 1px dashed #70CC50 !important;
 	box-shadow: 0 5px 5px rgba( 0, 0, 0, .25 ) !important;
+	cursor: move !important;
 }
 
 .ee-reg-form-editor-form-new-input-form {
@@ -234,7 +238,12 @@ table.question-options-table td:last-child {
 .ee-new-form-input-dv textarea,
 .ee-new-form-input-dv input[type="text"],
 .ee-new-form-input-dv input[type="email"],
-.ee-new-form-input-dv input[type="password"] {
+.ee-new-form-input-dv input[type="password"],
+.ee-new-form-input-settings-dv select,
+.ee-new-form-input-settings-dv textarea,
+.ee-new-form-input-settings-dv input[type="text"],
+.ee-new-form-input-settings-dv input[type="email"],
+.ee-new-form-input-settings-dv input[type="password"] {
 	border: 1px solid #ddd !important;
 	border-radius: 2px !important;
 	box-shadow: none !important;
